--- a/style.css
+++ b/style.css
@@ -1,97 +1,330 @@
 body {
-  background: #F7F9FC;
+  background: #242526;
   color: #575F7D;
   font-family: 'Lora', serif;
   font-size: 17px;
   font-weight: lighter;
   font-family: 'Edu SA Beginner', cursive;
 }
-
-
-
-.container{
-  display: row;
-  justify-content: center;
-  align-items: center;
-  width: 500px;   /* This sets the width */
-  margin: 0 auto; /* This automatically sets left/right margins */
-
+.top-bottom {
+  text-align: left;
+  animation: slideUpDown 9s infinite alternate;
+  color: #575F7D;/* Nombre de la animación y duración */
 }
 
+/* Definimos la animación con @keyframes */
+@keyframes slideUpDown {
+  from {
+    transform: translateY(0); /* Comenzamos desde la posición original */
+  }
+  to {
+    transform: translateY(430px); /* Terminamos 20px más abajo que la posición original */
+  }
+}
+
+.navegacion {
+  display: flex;
+  flex-direction: column; /* Cambiamos el flujo de la navegación a vertical */
+  align-items: flex-start;
+  margin-left: 25px;
+}
+
+.izquierda {
+  display: flex;
+  flex-direction: column;
+    background-color: #f8f8f8;
+    display: flex;
+    flex-direction: column; /* Cambiamos el flujo de la navegación a vertical */
+    align-items: center; /* Centramos los elementos verticalmente */
+}
+.img-1  {
+  max-width: 130px;
+  max-height: 130px;
+ border-radius: 20px;
+ margin-top: 10px;
+}
+/* nav*/
 
 
-a{
+.button-nav {
+  position: relative; /* Necesitamos una posición relativa para el pseudo-elemento */
   text-decoration: none;
+  color:#180a0af8;
+  margin-top: 30px;
+  transition: color 0.3s ease; /* Ajustamos la transición para el color */
 }
 
-.btn-blue {
-  background-color: #6B72E1;
-  color: white;
-  padding: 15px 20px;
-  border-radius: 4px;
+
+.front {
+  font-size: 20px;
+}
+.button-nav::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0; /* Iniciamos el ancho en 0 */
+  height: 1px; /* Altura de la línea */
+  background-color:#4d5357;
+  transition: width 0.3s ease; /* Ajustamos la transición para el ancho */
 }
 
-img {
-  max-width: 230px;
-  max-height: 230px;
-  border-radius: 50%;
+.button-nav:hover::before {
+  width: 100%; /* Aumentamos el ancho al 100% al pasar el cursor */
 }
 
+.button-nav:hover {
+  color: #4d5357; /* Cambiamos el color al pasar el cursor */
+}
+
+.small {
+  font-size: 10px;
+}
+
+/* here is goes the midel of the pg*/
+
+/* Estilos cuando se pasa el cursor por encima del botón */
+
+
+.alinear-derecha{
+  margin-top: 90px;
+  display: flex;
+  flex-direction: column; /* Cambiamos la dirección a columna para que los elementos se apilen verticalmente */
+  justify-content: center; /* Alineamos el contenido al centro vertical */
+  align-items: center; /* Alineamos el contenido al centro horizontal */
+  height: 90vh; /* Altura de la sección */
+  margin-right: 40rem;
+
+
+}
 
 .card {
-  margin: 3rem auto;
+  display: grid;
+  grid-template-columns: 1fr 2fr 1fr;
   text-align: center;
-  background: white;
-  padding: 30px;
-  border: 1px solid lightgrey;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px  rgba(0, 0, 0, 0.2);
+  background-image: url(./images/cara,2.jpg);
+  background-size: cover;
+  background-position: center;
+ /* Ajustamos el tamaño de la imagen */
+  background-repeat: no-repeat;
 
 }
-
-
 .list-inline {
   display: inline-block;
   padding: 0px 20px;
-
 }
-
 .kit {
   list-style: none;
   list-style: none;
   padding-left: 0px;
 }
 
-
-.grenn {
-  color: green;
-  font-size: 30px;
-  margin-top: 0;
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color:  #575F7D;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  border-radius: 20%;
 }
+.button:hover {
+  background-color: #3d21213b; /* Cambiar el color de fondo cuando el cursor está encima */
+}
+
+
+/*  here is goes the foother */
+
+
+
+/*  finish the is goes the foother */
+
+
+
+
+
 /*  @media quiery */
-
-
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
     width: 700px;
   }
 }
-
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
     width: 500px;
   }
 }
-
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
     width: 300px;
   }
 
+}
 
-  body{
-    background-color: red;
-  }
+footer {
+  margin-bottom: 0;
+}
+
+.follo {
+  color: rgb(142, 1, 1);
+ padding-left: 42px;
+}
+
+
+.color-r {
+  color: #575F7D;
+  font-size: 20px;
+  transition: font-size .3s ease;
+}
+
+.color-r:hover {
+  font-size: 30px;
+}
+
+
+
+
+
+
+
+ /* here is goes de contacto */
+
+ .navegacion-f {
+  display: flex;
+   /* Cambiamos el flujo de la navegación a vertical */
+  align-items: flex-end;
+}
+.button-nav-f {
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Alinea el contenido horizontalmente en el centro */
+  position: relative;
+  text-decoration: none;
+  color: #575F7D;
+  margin-top: 30px;
+  transition: color 0.3s ease;
+  margin-left: auto; /* Ajusta el margen izquierdo a 'auto' para centrar */
+  margin-right: auto; /* Ajusta el margen derecho a 'auto' para centrar */
+  margin-bottom: 154px;
+}
+.button-nav-f::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0; /* Iniciamos el ancho en 0 */
+  height: 1px; /* Altura de la línea */
+  color: #575F7D;
+  transition: width 0.3s ease; /* Ajustamos la transición para el ancho */
+}
+
+.button-nav-f:hover::before {
+  width: 100%; /* Aumentamos el ancho al 100% al pasar el cursor */
+}
+
+
+ .imagen-contacto{
+  background-position: center center;
+  background-size: cover;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+
+
+.imgs {
+  max-width: 30rem;
+  max-height: 30rem;
+  margin: auto; /* Centra la imagen horizontalmente utilizando margen automático */
+}
+
+.card-contacto {
+  margin: 1rem 1rem;
+  text-align: center;
+  border: 1px solid rgb(102, 20, 20);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  background: rgb(201,42,35);
+  background: radial-gradient(circle, rgba(201,42,35,0) 16%, rgba(75,33,33,1) 67%);
+  background-size: cover;
+   /* Cambiamos el valor de cover a contain */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-position: center; /* Centra la imagen en el contenedor */
+
+}
+
+label{
+  opacity: 20%;
+  color: rgb(216, 199, 199);
+}
+
+
+fieldset legend{
+  color: red;
+}
+input{
+  opacity: 50%;
+}
+textarea {
+  opacity: 20%;
+}
+
+.top {
+  margin-top: 15px;
+}
+
+
+.formulario {
+  background-color:rgb(168, 66, 66); ;
+  padding: 20px;
+  border-radius: 20px; /* Ajusta este valor para cambiar el radio de los bordes */
+  width: 400px; /* Ajusta el ancho del formulario según tus necesidades */
+  margin: 0 auto; /* Centra el formulario horizontalmente en su contenedor */
+}
+
+
+
+
+footer {
+  margin-top: 20rem;
+  margin-right: 190px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centrar horizontalmente */
+  justify-content: center; /* Centrar verticalmente */
+  text-align: center; /* Para centrar el texto dentro de los elementos */
+
+  margin-left: 25px;
+
+}
+
+.footer h3 {
+  margin-bottom: 10px; /* Agregar un pequeño espacio entre el h3 y el ul */
+}
+
+.footer ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+
+.fab{
+
+  color: #575F7D;
+}
+
+a{
+  color: #575F7D;
 }
